--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
 <!-- basic -->
@@ -190,100 +189,33 @@
     </div>
     <!-- Categories section end -->
     <!-- newsletter section start -->
-    <div class="newsletter_section layout_padding">
+    <div class="newsletter_section layout_padding mt-5 md:mt-0">
       <div class="container">
         <div class="newsletter_bg">
           <h1 class="Subscribe_text">Join now</h1>
-          <img src="cover.jpeg" alt="">
-          <div class="submit_bt"><a href="#">SUBMIT NOW</a></div>
+          <img src="cover.jpeg" class="md:mt-5" alt="">
+          <div class="submit_bt"><a href="https://t.me/gambleGoldchat">Telegram</a></div>
         </div>
       </div>
     </div>
     <!-- newsletter section end -->
     <!-- Contact section start -->
-    <div class="Contact_section layout_padding">
-      <div class="container">
-        <h1 class="categories_text">Contact Us <span><img src="images/img-2.png"></span></h1>
-        <div class="email_box">
-          <div class="input_main">
-            <div class="container">
-              <form action="/action_page.php">
-                <div class="form-group">
-                  <input type="text" class="email-bt" placeholder="Name" name="Name">
-                </div>
-                <div class="form-group">
-                  <input type="text" class="email-bt" placeholder="Phone Numbar" name="Phone Numbar">
-                </div>
-                <div class="form-group">
-                  <input type="text" class="email-bt" placeholder="Email Address" name="Email Address">
-                </div>
-                <div class="form-group">
-                  <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
-                </div>
-              </form>   
-            </div> 
-            <div class="send_bt"><a href="#">SEND</a></div>                  
-          </div>
-        </div>
-      </div>
-    </div>
+   
     <!-- Contact section end -->
     <!-- footer section start -->
-    <div class="footer_section layout_padding">
-      <div class="container">
-        <div class="footer_logo">FarmFund</div>
-        <div class="footer_taital">
-          <div class="row">
-          <div class="col-sm-6 col-lg-3 border_left_0">
-            <div class="location_text"><img src="images/map-icon.png"><span class="padding_left_15">Locations</span></div>
-            <div class="location_text"><img src="images/call-icon.png"><span class="padding_left_15">+ 9876543210</span></div>
-            <div class="location_text"><img src="images/mail-icon.png"><span class="padding_left_15">demo@gmail.com</span></div>
-          </div>
-          <div class="col-sm-6 col-lg-3">
-            <h3 class="useful_text">Useful Link</h3>
-            <div class="footer_menu">
-              <ul>
-                <li><a href="#">humour, or</a></li>
-                <li><a href="#">randomised</a></li>
-                <li><a href="#">words which</a></li>
-                <li><a href="#">don't look even</a></li>
-                <li><a href="#">slightly</a></li>
-                <li><a href="#">believable. If</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-sm-6 col-lg-3 border_right_0">
-            <h3 class="useful_text">Menus</h3>
-            <div class="footer_menu">
-              <ul>
-                <li><a href="#">humour, or</a></li>
-                <li><a href="#">randomised</a></li>
-                <li><a href="#">words which</a></li>
-                <li><a href="#">don't look even</a></li>
-                <li><a href="#">slightly</a></li>
-                <li><a href="#">believable. If</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-sm-6 col-lg-3">
-            <h3 class="useful_text">Follow Us</h3>
-            <div class="social_icon">
-              <ul>
-                <li><a href="#"><img src="images/fb-icon.png"></a></li>
-                <li><a href="#"><img src="images/twitter-icon.png"></a></li>
-                <li><a href="#"><img src="images/linkedin-icon.png"></a></li>
-                <li><a href="#"><img src="images/instagram-icon.png"></a></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-        </div>
-        <div class="copyright_text">Copyright 2020 All Right Reserved By <a href="https://html.design">Free html  Templates</a></div>
+    <div class="footer_section mt-10 md:mt-0">
+      
+        
+        <div class="copyright_text">Listed on BSC chain</div>
       </div>
     </div>
     <!-- footer section end -->
     <!-- Javascript files-->
-    <script src="js/jquery.min.js"></script>
+    <!-- <script src="js/jquery.min.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/10.2.0/swiper-bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/jquery-3.0.0.min.js"></script>
@@ -292,7 +224,7 @@
     <script src="js/jquery.mCustomScrollbar.concat.min.js"></script>
     <script src="js/custom.js"></script>
     <!-- javascript --> 
-    <script src="js/owl.carousel.js"></script>
+    <!-- <script src="js/owl.carousel.js"></script> -->
     <script src="https:cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.js"></script>
     <script>
     $(document).ready(function(){
