--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 <!-- Responsive-->
 <link rel="stylesheet" href="css/responsive.css">
 <!-- fevicon -->
-<link rel="icon" href="main.jpeg" type="image/gif" />
+<link rel="icon" href="main.jpeg"/>
 <!-- Scrollbar Custom CSS -->
 <link rel="stylesheet" href="css/jquery.mCustomScrollbar.min.css">
 <!-- Tweaks for older IEs-->
