--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
                 <div class="overlay-content">
                   <a href="#home">Home</a>
                   <a href="#about">About</a>
-                  <a href="#tokenomics">Tokenomics</a>
+                  <a href="#team">team</a>
                   <a href="https://t.me/gambleGoldchat">Telegram</a>
                   <a href="https://t.me/gambleGoldchat">Twitter</a>
                 </div>
@@ -103,7 +103,7 @@
     </div>
     <!-- header section end -->
     <!-- about section start -->
-    <div class="about_section layout_padding">
+    <div id="about" class="about_section layout_padding">
       <div class="container">
         <div class="row">
           <div class="col-md-6">
